Rotate clouds video only

--- a/pwa_webapp_code/index.html
+++ b/pwa_webapp_code/index.html
@@ -47,10 +47,8 @@
       }
 
       function createIframeElement() {
-        var videoTemplates = ["small.html", "clouds.html", "turbines.html"];
-        var randomVideo = videoTemplates[Math.floor(Math.random() * videoTemplates.length)];
         let iframeElement = document.createElement("iframe");
-        iframeElement.src = randomVideo;
+        iframeElement.src = "clouds.html";
         iframeElement.scrolling = "no";
         iframeElement.sandbox = "allow-scripts allow-same-origin";
         iframeElement.allowtransparency = "allowtransparency";
