Rotate small video only
Per feedback from the crbug comment

--- a/pwa_webapp_code/index.html
+++ b/pwa_webapp_code/index.html
@@ -48,7 +48,7 @@
 
       function createIframeElement() {
         let iframeElement = document.createElement("iframe");
-        iframeElement.src = "clouds.html";
+        iframeElement.src = "small.html";
         iframeElement.scrolling = "no";
         iframeElement.sandbox = "allow-scripts allow-same-origin";
         iframeElement.allowtransparency = "allowtransparency";
