--- a/pwa_webapp_code/turbines.html
+++ b/pwa_webapp_code/turbines.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <video id="video" autoplay>
+    <video id="video" autoplay loop>
       <source src="turbines.webm" autoplay loop>
     </video>
   </body>
